<?xml version="1.0" encoding="utf-8"?>
<ui version="4.0">
	<class>AddEditUserDialog</class>
	<widget class="QDialog" name="AddEditUserDialog">
		<property name="geometry">
			<rect>
				<x>0</x>
				<y>0</y>
				<width>400</width>
				<height>300</height>
			</rect>
		</property>
		<property name="windowTitle">
			<string>添加/编辑用户</string>
		</property>
		<layout class="QVBoxLayout" name="verticalLayout">
			<item>
				<widget class="QGroupBox" name="groupBox">
					<property name="title">
						<string>用户信息</string>
					</property>
					<layout class="QFormLayout" name="formLayout">
						<item row="0" column="0">
							<widget class="QLabel" name="label">
								<property name="text">
									<string>用户名:</string>
								</property>
							</widget>
						</item>
						<item row="0" column="1">
							<widget class="QLineEdit" name="usernameLineEdit"/>
						</item>
						<item row="1" column="0">
							<widget class="QLabel" name="label_2">
								<property name="text">
									<string>密码:</string>
								</property>
							</widget>
						</item>
						<item row="1" column="1">
							<widget class="QLineEdit" name="passwordLineEdit">
								<property name="echoMode">
									<enum>QLineEdit::EchoMode::Password</enum>
								</property>
							</widget>
						</item>
						<item row="2" column="0">
							<widget class="QLabel" name="label_3">
								<property name="text">
									<string>家庭名称:</string>
								</property>
							</widget>
						</item>
						<item row="2" column="1">
							<widget class="QLineEdit" name="familyNameLineEdit"/>
						</item>
						<item row="3" column="0">
							<widget class="QLabel" name="label_4">
								<property name="text">
									<string>角色:</string>
								</property>
							</widget>
						</item>
						<item row="3" column="1">
							<widget class="QComboBox" name="roleComboBox"/>
						</item>
					</layout>
				</widget>
			</item>
			<item>
				<widget class="QDialogButtonBox" name="buttonBox">
					<property name="orientation">
						<enum>Qt::Orientation::Horizontal</enum>
					</property>
					<property name="standardButtons">
						<set>QDialogButtonBox::StandardButton::Cancel|QDialogButtonBox::StandardButton::Ok</set>
					</property>
				</widget>
			</item>
		</layout>
	</widget>
	<resources/>
	<connections>
		<connection>
			<sender>buttonBox</sender>
			<signal>accepted()</signal>
			<receiver>AddEditUserDialog</receiver>
			<slot>accept()</slot>
			<hints>
				<hint type="sourcelabel">
					<x>248</x>
					<y>254</y>
				</hint>
				<hint type="destinationlabel">
					<x>157</x>
					<y>274</y>
				</hint>
			</hints>
		</connection>
		<connection>
			<sender>buttonBox</sender>
			<signal>rejected()</signal>
			<receiver>AddEditUserDialog</receiver>
			<slot>reject()</slot>
			<hints>
				<hint type="sourcelabel">
					<x>316</x>
					<y>254</y>
				</hint>
				<hint type="destinationlabel">
					<x>286</x>
					<y>274</y>
				</hint>
			</hints>
		</connection>
	</connections>
</ui>
